# shallow-search

./: .gitignore  README.md  demo.ipynb  main_dapo.sh  pyproject.toml
datasets/: download_datasets.ipynb
envs/tools/: search.py
rag_server/: build_datasets.ipynb  launch.sh  rag_config.py  rag_schemas.py  rag_server.py  test.ipynb
verl/: setup.py
verl/trainer/config/: dapo.yaml
